--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500&family=Lora:ital,wght@0,400;0,500;1,400;1,500&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
+    <title>Forside</title>
 </head>
 
 <body>
@@ -15,7 +20,7 @@
                 <a href="index.html">Tøjhjemmeside</a>
                 <p>Ufærdig landing page med links.</p>
             </div>
-            <ul class="menu">
+            <ul class="index_menu">
                 <li><a href="index.html">index.html</a></li>
                 <li><a href="kategori.html">kategori.html</a></li>
                 <li><a href="produkt.html">produkt.html</a></li>
