--- a/kategori.html
+++ b/kategori.html
@@ -27,10 +27,22 @@
         </nav>
     </header>
     <main>
-
+        <div class="kategori">
+            <div class="kat_titel">
+                <h1>Categories</h1>
+            </div>
+            <div class="grid_3-1">
+                <a class="kat_button" href="produktliste.html">Accessories</a>
+                <a class="kat_button" href="produktliste.html">Apparel</a>
+                <a class="kat_button" href="produktliste.html">Footwear</a>
+                <a class="kat_button" href="produktliste.html">Free Items</a>
+                <a class="kat_button" href="produktliste.html">Personal Care</a>
+                <a class="kat_button" href="produktliste.html">Sporting Goods</a>
+            </div>
+        </div>
     </main>
 
-    <script src="menu.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
