--- a/produktliste.html
+++ b/produktliste.html
@@ -27,7 +27,19 @@
         </nav>
     </header>
     <main>
-
+        <div class="produktliste">
+            <div class="prod_titel">
+                <h1>Apparel</h1>
+            </div>
+            <div class="grid_3">
+                <a class="prod_button" href="produkt.html"><img src="billeder/1531.webp" alt="Produkt"></a>
+                <a class="prod_button" href="produkt.html"><img src="billeder/1573.webp" alt="Produkt"></a>
+                <a class="prod_button" href="produkt.html"><img src="billeder/1552.webp" alt="Produkt"></a>
+                <a class="prod_button" href="produkt.html"><img src="billeder/1533.webp" alt="Produkt"></a>
+                <a class="prod_button" href="produkt.html"><img src="billeder/1555.webp" alt="Produkt"></a>
+                <a class="prod_button" href="produkt.html"><img src="billeder/1556.webp" alt="Produkt"></a>
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
