--- a/produktliste.html
+++ b/produktliste.html
@@ -32,12 +32,50 @@
                 <h1>Apparel</h1>
             </div>
             <div class="grid_3">
-                <a class="prod_button" href="produkt.html"><img src="billeder/1531.webp" alt="Produkt"></a>
-                <a class="prod_button" href="produkt.html"><img src="billeder/1573.webp" alt="Produkt"></a>
-                <a class="prod_button" href="produkt.html"><img src="billeder/1552.webp" alt="Produkt"></a>
-                <a class="prod_button" href="produkt.html"><img src="billeder/1533.webp" alt="Produkt"></a>
-                <a class="prod_button" href="produkt.html"><img src="billeder/1555.webp" alt="Produkt"></a>
-                <a class="prod_button" href="produkt.html"><img src="billeder/1556.webp" alt="Produkt"></a>
+                <div class="prod_list">
+                    <a class="prod_button udsolgt" href="produkt.html"><img src="billeder/1531.webp" alt="Produkt"></a>
+                    <h2>Puma workout t-shirt</h2>
+                    <p class="price">DKK 550,-</p>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1573.webp" alt="Produkt"></a>
+                    <h2>Workout leggings</h2>
+                    <p class="price"><span>Prev.</span> DKK 300,-</p>
+                    <div class="discounted">
+                        <p>Now DKK 150,-</p>
+                        <p class="procent">-50%</p>
+                    </div>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1552.webp" alt="Produkt"></a>
+                    <h2>Puma football</h2>
+                    <p class="price">DKK 550,-</p>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button udsolgt" href="produkt.html"><img src="billeder/1533.webp" alt="Produkt"></a>
+                    <h2>Puma red workout t-shirt</h2>
+                    <p class="price">DKK 550,-</p>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1555.webp" alt="Produkt"></a>
+                    <h2>Quechua thermal waterbottle</h2>
+                    <p class="price">DKK 550,-</p>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1556.webp" alt="Produkt"></a>
+                    <h2>Quechua hiking backpack</h2>
+                    <p class="price">DKK 779,-</p>
+                    <div class="discounted">
+                        <p>Now DKK 625,-</p>
+                        <p class="procent">-20%</p>
+                    </div>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
             </div>
         </div>
     </main>
