Flere shopping muligheder

--- a/produktliste.html
+++ b/produktliste.html
@@ -67,13 +67,37 @@
                     <a class="prod_link" href="produkt.html">Read more</a>
                 </div>
                 <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1570.webp" alt="Produkt"></a>
+                    <h2>Workout tanktop</h2>
+                    <p class="price">DKK 429,-</p>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1571.webp" alt="Produkt"></a>
+                    <h2>Kalenji white running shoes</h2>
+                    <p class="price">DKK 339,-</p>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
                     <a class="prod_button" href="produkt.html"><img src="billeder/1556.webp" alt="Produkt"></a>
                     <h2>Quechua hiking backpack</h2>
-                    <p class="price">DKK 779,-</p>
+                    <p class="price"><span>Prev.</span> DKK 779,-</p>
                     <div class="discounted">
                         <p>Now DKK 625,-</p>
                         <p class="procent">-20%</p>
                     </div>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1590.webp" alt="Produkt"></a>
+                    <h2>Black football shoes</h2>
+                    <p class="price">DKK 620,-</p>
+                    <a class="prod_link" href="produkt.html">Read more</a>
+                </div>
+                <div class="prod_list">
+                    <a class="prod_button" href="produkt.html"><img src="billeder/1569.webp" alt="Produkt"></a>
+                    <h2>Workout shorts</h2>
+                    <p class="price">DKK 189,-</p>
                     <a class="prod_link" href="produkt.html">Read more</a>
                 </div>
             </div>
