--- a/produkt.html
+++ b/produkt.html
@@ -27,7 +27,25 @@
         </nav>
     </header>
     <main>
-
+        <div class="produkt">
+            <div class="grid_1-1">
+                <img src="billeder/1552.webp" alt="Produkt">
+                <div class="prod_tekst">
+                    <div class="shopping">
+                        <h1>Puma</h1>
+                        <h2>Power Cat Trainer-WR Football</h2>
+                        <p class="price">DKK 550,-</p>
+                        <div class="prod_buttons">
+                            <a class="p_button1" href="produkt.html">ADD TO BASKET</a>
+                            <a class="p_button2" href="produkt.html">WISHLIST</a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Product information</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
