--- a/produktliste.html
+++ b/produktliste.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="prod_list">
                     <a class="prod_button" href="produkt.html"><img src="billeder/1552.webp" alt="Produkt"></a>
-                    <h2>Puma football</h2>
+                    <h2>Puma Power Cat Trainer-WR Football</h2>
                     <p class="price">DKK 550,-</p>
                     <a class="prod_link" href="produkt.html">Read more</a>
                 </div>
