--- a/produkt.html
+++ b/produkt.html
@@ -34,14 +34,25 @@
                     <div class="shopping">
                         <h1>Puma</h1>
                         <h2>Power Cat Trainer-WR Football</h2>
-                        <p class="price">DKK 550,-</p>
+                        <p class="pris">DKK 550,-</p>
                         <div class="prod_buttons">
                             <a class="p_button1" href="produkt.html">ADD TO BASKET</a>
                             <a class="p_button2" href="produkt.html">WISHLIST</a>
                         </div>
                     </div>
                     <div class="info">
+                        <p>100% Original Products</p>
+                        <p>Pay on delivery might be available</p>
+                        <p>Easy 14 day returns and exchange</p>
                         <h3>Product information</h3>
+                        <ol>
+                            <li>A football for soccer games in all weather conditions</li>
+                            <li>Puma's hi-tech airlock valve to keep the ball bouncy at 8-12 PSI, 0.6-0.8 bar</li>
+                            <li>Comes in a catchy white, red, black coloured design with puma leaping cat symbol on it
+                            </li>
+                            <li>A size 5 football with 19 cm diameter, it comes with a 1 year shape guarantee</li>
+                        </ol>
+                        <p>Product code: 1552</p>
                     </div>
                 </div>
             </div>
