--- a/produkt.html
+++ b/produkt.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="produkt.js"></script>
 </body>
 
 </html>
